APPL-5714. MACsec: Timestamps are now using a monotonic clock instead of gettimeofday(), added MACsec build for JR2, added MACsec trace group
Merge in UNGE/sw-mesa from master.APPL-5714 to master

Squashed commit of the following:

commit e865428d0f333861869f431377ca5a241000b55a
Merge: 0991df797 938136057
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Fri Jun 7 07:25:12 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 0991df797d6cceff5f078c1cddd55d9bf5a28850
Merge: 6d8376c4a b6dd4e99a
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Mon Jun 3 14:16:42 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 6d8376c4ad995df65ae34f530d08bf9071a4bd97
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Mon Jun 3 14:16:22 2024 +0200

    Revert "APPL-5714. MACsec: 00-00-00-00-00-00 is perfectly valid peer MAC address"

    This reverts commit d295dc96c765e8327d2014735ef9198cdded297e.

commit d295dc96c765e8327d2014735ef9198cdded297e
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Fri May 17 07:41:55 2024 +0200

    APPL-5714. MACsec: 00-00-00-00-00-00 is perfectly valid peer MAC address

commit 40ca9741e79f5e8299a981723e6632f5d2c03979
Merge: 11f7bcbc3 f493ba57a
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Wed May 15 16:29:37 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 11f7bcbc3b2ecbc1ff823b5b283899ab8df96149
Merge: 57b517764 9c5c59dc3
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Wed May 15 09:13:05 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 57b517764de855d9cd1dfc4544d669f45a1d41ec
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Wed May 15 09:12:50 2024 +0200

    APPL-5714. MACsec: Changed created_time, started_time, and stopped_time from time-of-day to uptime, which is in accordance with TimeStamp from the SNMPv2-TC

commit 5317c460

--- a/mepa/docs/macsec.adoc
+++ b/mepa/docs/macsec.adoc
@@ -238,7 +238,7 @@ Secure Channel Identifier (SCI) or by MAC virtual port.
                            This SA is not enabled until vtss_macsec_rx_sa_activate() is performed.
 
 `mepa_macsec_rx_sa_get()`: Get the Rx SA configuration of the active SA.
-                           If SA was created before any change on parameter like Replay Widow etc. Lowest PN may appear to be consistent with newly
+                           If SA was created before any change on parameter like Replay Window etc. Lowest PN may appear to be consistent with newly
                            updated value, but the actual value will be according to the SA's creation time. One has to subtract the change in the
                            the value obtained from API to get the actual value. Updating parameters like Replay Window doesn't change the older SA's.
 
@@ -253,7 +253,7 @@ Secure Channel Identifier (SCI) or by MAC virtual port.
 `mepa_macsec_rx_sa_lowest_pn_update()`: Set (update) the packet number (pn) value to value in lowest_pn
 
 `mepa_macsec_rx_sa_status_get()`: Rx SA status
-                                  If SA was created before any change on parameter like Replay Widow etc. Lowest PN may appear to be consistent with newly
+                                  If SA was created before any change on parameter like Replay Window etc. Lowest PN may appear to be consistent with newly
                                   updated value, but the actual value will be according to the SA's creation time. One has to subtract the change in the
                                   the value obtained from API to get the actual value. Updating parameters like Replay Window doesn't change the older SA's.
 
@@ -270,7 +270,7 @@ Secure Channel Identifier (SCI) or by MAC virtual port.
 
 `mepa_macsec_tx_sa_set()`: Create an Tx SA which is associated with the Tx SC within the SecY.
                            This SA is not in use until vtss_macsec_tx_sa_activate() is performed.
-                           If SA was created before any change in parameters like Replay Widow etc. Lowest PN may appear to be consistent with newly
+                           If SA was created before any change in parameters like Replay Window etc. Lowest PN may appear to be consistent with newly
                            updated value, but the actual value will be according to the SA's creation time. One has to subtract the change in the
                            the value obtained from API to get the actual value. Updating parameters like Replay Window doesn't change the older SA's
 
@@ -283,7 +283,7 @@ Secure Channel Identifier (SCI) or by MAC virtual port.
 
 `mepa_macsec_tx_sa_del()`: This function deletes Tx SA object identified by an. The Tx SA must be disabled before deleted.
 
-`mepa_macsec_tx_sa_status_get()`: TX SA status, if SA was created before any change on parameter like Replay Widow etc. Lowest PN may appear to be consistent with newly
+`mepa_macsec_tx_sa_status_get()`: TX SA status, if SA was created before any change on parameter like Replay Window etc. Lowest PN may appear to be consistent with newly
                            updated value, but the actual value will be according to the SA's creation time. One has to subtract the change in the
                            the value obtained from API to get the actual value. Updating parameters like Replay Window doesn't change the older SA's.
 
@@ -297,7 +297,7 @@ Secure Channel Identifier (SCI) or by MAC virtual port.
 === Header / TAG Bypass
 
 Additionally the API provide support for external-virtual ports (port
-virtalization done outside the SECtag). This includes protecting streams
+virtualization done outside the SECtag). This includes protecting streams
 which are encapsulated in VLAN-tag, double VLAN tag and MPLS tunnels. This
 is an extension to what is defined in IEEE 802.1AE.
 
