DOC: Adding LAN969x to the list of supported HW

--- a/mesa/docs/supported-hw.adoc
+++ b/mesa/docs/supported-hw.adoc
@@ -52,6 +52,18 @@ The following tables lists the supported HW in this release.
 | SparX-5i | VSC7558TSN | SparX-5i-200
 | LAN966x  | LAN9662    | LAN9662
 | LAN966x  | LAN9668    | LAN9668
+| LAN969x  | LAN9694    | LAN9694
+| LAN969x  | LAN9691VAO | LAN9691VAO
+| LAN969x  | LAN9694TSN | LAN9694TSN
+| LAN969x  | LAN9694RED | LAN9694RED
+| LAN969x  | LAN9696    | LAN9696
+| LAN969x  | LAN9692VAO | LAN9692VAO
+| LAN969x  | LAN9696TSN | LAN9696TSN
+| LAN969x  | LAN9696RED | LAN9696RED
+| LAN969x  | LAN9698    | LAN9698
+| LAN969x  | LAN9693VAO | LAN9693VAO
+| LAN969x  | LAN9698TSN | LAN9698TSN
+| LAN969x  | LAN9698RED | LAN9698RED
 |===
 
 === Supported PHYs
